--- a/tex/main.tex
+++ b/tex/main.tex
@@ -179,7 +179,7 @@
 فيما يخص للأدوات يُفضل بالطبع استخدام أدوات حرة لتوطين البرمجيات الحرة.
 نَسَق الملفات PO هو الأكثر شيوعا، ولأنه يحوى النص المصدر إضافة إلى
 الترجمة (مثله مثل XLIFF) فالاهتمام أقل بإعادة الترجمة وتبادل ذواكر
-الترجمة. قسم “صيرورة توطين بسيطة” في \at{صفحة}[ref:38565525]
+الترجمة. قسم~“\about[ref:38565525]” في \at{صفحة}[ref:38565525]
 يعرض مثالا على صيرورة التوطين.
 
 \chapter{نظرة عامة}
@@ -218,7 +218,7 @@
 ذلك) تُحتِّم التخطيط لوسائل استدامة واستمرارية المشروع. فكِّر في كيفية
 تحفيز المتطوعين. و إن توفر المال سيكون عليك وضع ميزانية ومراقبة مدى
 الالتزام بها، وعليك كذلك حساب الوقت المستغرق في إنجاز العمل لتستطيع
-تنظيم الوقت أفضل. قسم “تحديد الأولويات (عندما لا تستطيع فعل كل شيء)”
+تنظيم الوقت أفضل. قسم~“\about[ref:36383525]”
 \at{صفحة}[ref:36383525] يناقش بعض وسائل تقييم المشروعات وتحديد
 أولوياتها.
 
@@ -374,7 +374,7 @@
 
 لست مضطرا إلى الاختيار ما بين هاتين الأداتين فهما تكمل إحداهما الأخرى.
 فالمشروعات المستضافة على بوتل تمكن ترجمتها بلا اتصال بالإنترنت باستخدام
-فرتال ثم رفع الملفات المترجمة إلى بوتل. قسم “أدوات التوطين” في \at{صفحة}[ref:30364807] يشرح هاتين الأداتين بتفصيل أكبر. عدة أقسام
+فرتال ثم رفع الملفات المترجمة إلى بوتل. قسم~“\about[ref:30364807]” في \at{صفحة}[ref:30364807] يشرح هاتين الأداتين بتفصيل أكبر. عدة أقسام
 في هذا الكتاب تتحدث عن وظائف معينة في هاتين الأداتين لذا من المحبذ
 تنصيب فرتال و فتح حساب في أحد خواديم بوتل لتجربة الإرشادات الواردة في
 الكتاب. سيقدم فرتال العون الأكبر أثناء الترجمة عبر تلوين الأجزاء المهمة
@@ -629,7 +629,7 @@
 فأحيانا تظن أن بوسعك صوغ الترجمة بأحسن مما هي عليه في المصدر، لكن عليك
 قبل فعل هذا التيقن من أنك لست تغير المعنى المراد. مع هذا فالصياغة قد
 تكون غامضة في المصدر أو أن بنية العبارات و إيجازها يحتمل التأويل. راجع
-النقاط في قسم “مبادئ أساسية” في \at{صفحة}[ref:34314226] ففيها
+النقاط في قسم~“\about[ref:34314226]” في \at{صفحة}[ref:34314226] ففيها
 أمثلة على هذا. على سبيل المثال يجب ألا تكون الترجمة أكثر عمومية و لا
 أكثر تخصيصا من النص المصدر. واعلم أن النصّ قد يُستعمل في سياقات قد لا
 تتوقعها، فإذا بعدت الترجمة كثيرا عن الأصل فإنها قد لا تلائم بعض تلك
@@ -738,7 +738,9 @@ connection}?}
 كذلك اختيار مصطلحات موجودة فعلا في الترجمة التي تعمل عليها بدلا من
 العمل على مصطلحات قد تكون مفيدة لكنك لا تحتاجها في الوقت الحالي. من
 الحلول المناسبة لهذه المهمة استخدام أداة استخراج مصطلحات مثل {\bf
-poterminology} من عُدّة الترجمة (انظر \at{صفحة}[ref:20165030])، كما يحتوي بوتل على نفس الوظيفة (انظر \at{صفحة}[ref:20355427]). تعمل هذه الأدوات على تحليل النص لاستخراج
+poterminology} من عُدّة الترجمة (انظر \at{صفحة}[ref:20165030])،
+كما يحتوي بوتل على نفس الوظيفة (انظر \at{صفحة}[ref:20355427]).
+تعمل هذه الأدوات على تحليل النص لاستخراج
 قائمة المصطلحات المتكررة منه، قد لا تكون كل المصطلحات في القائمة
 الناتجة مهمة أو ذات دلالة تبرر تضمينها في المسرد لكن يمكن عدُّ هذه
 القائمة اقتراحات مبدئية توفر الوقت.
@@ -1602,7 +1604,7 @@ bja\lettertilde fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 
 \subsubsection{المراجعة}
 اختبر تعييناتك بصريا بتشغيل البرمجية. التعارض ليس مشكلة كبيرة وغالبا
-سيُحل مع الوقت. راجع قسم “المراجعة العملية” \at{صفحة}[ref:34365426].
+سيُحل مع الوقت. راجع قسم~“\about[ref:34365426]” \at{صفحة}[ref:34365426].
 
 \section[ref:43252826]{التعامل المتقدم مع المتغيرات}
 أحيانا يتعرَّض المترجم للتعامل
@@ -1644,7 +1646,7 @@ bja\lettertilde fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 
 \subsection[ref:43524426]{الوقت والتاريخ}
 أحيانا تُستعمل المتغيرات لضبط
-تنسيق الوقت والتاريخ. طالع قسم “تنسيق الأعداد والتواريخ” في \at{صفحة}[ref:30596701] لمزيد من المعلومات. هذه الحالة قد تتطلّب
+تنسيق الوقت والتاريخ. طالع قسم~“\about[ref:30596701]” في \at{صفحة}[ref:30596701] لمزيد من المعلومات. هذه الحالة قد تتطلّب
 استعمال متغيرات غير ما في المصدر.
 
 \subsubsection{مثال}
@@ -1857,8 +1859,8 @@ bja\lettertilde fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 الصلاحيات وأداء مهام الإدارة الأخرى. راجع وثائق بُوتل لمزيد من
 المعلومات عن هذه الخصائص.
 
-بوسع مدراء الموقع إضافة لغات أو مشروعات جديدة وقوالب للترجمة (راجع قسم
-“صيرورة توطين بسيطة” \at{صفحة}[ref:38565525] لمعرفة فائدة
+بوسع مدراء الموقع إضافة لغات أو مشروعات جديدة وقوالب للترجمة
+(راجع قسم~“\about[ref:38565525]” \at{صفحة}[ref:38565525] لمعرفة فائدة
 القوالب). عادة ما تُنشر بيانات اتصال ليُمكن للمستخدمين التواصل مع مديري
 الخادوم\letterbackslash مشروع الترجمة.
 
@@ -1884,7 +1886,7 @@ bja\lettertilde fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 
 \subsection{اختبارات الجودة}
 في بوتِل وظيفة لمراجعة جودة الترجمات بفحص عدة مؤشرات يمكنها أن تدل على
-نقاط ضعف في الجودة. طالع قسم “المراجعة الآلية” في \at{صفحة}[ref:36134309].
+نقاط ضعف في الجودة. طالع قسم~“\about[ref:36134309]” في \at{صفحة}[ref:36134309].
 
 ليست كل المشاكل التي يشير إليها بُوتل أخطاء فعلية، إنما هو تنبيه باحتمال
 وجود خطأ عليك مراجعته. على مدراء بوتل تحديد نوع المشروع (گنوم، كدي،
@@ -1956,7 +1958,7 @@ bja\lettertilde fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 يكون لكل مشروع نظام مختلف لمنح هذه الصلاحيات. في الغالب لست مضطرا إلى
 فهم أنظمة إدارة الإصدارات لتوطين البرمجيات، لكن في بعض الحالات يكون
 أفضل لك أن تعرف أساسيات عملها. يمكنك الاستعانة بالمطورين لإرشادك؛ و
-إحالتك إلى أية وثائق تعنيك مطالعتها. يشرح قسم “نظم إدارة الإصدارات”
+إحالتك إلى أية وثائق تعنيك مطالعتها. يشرح قسم~“\about[ref:34384626]”
 \at{صفحة}[ref:34384626] بعض أساسياتها.
 
 سواء حصلت على الملفات بهذه الطريقة أو تلك فعليك التأكد من إن كانت
@@ -2114,8 +2116,8 @@ bja\lettertilde fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 بترجمتك، إذ قد ينم هذا عن انصباب اهتمام المطور بالمترجمين وسعيه لتوفير
 بيئة مناسبة لمساهماتهم و تقديم الدعم لهم. إذا كنت تستحدث ترجمة جديدة
 فاحرص على أن يكون أمامك وقت كافٍ للانتهاء من الترجمة واختبارها. اقرأ
-المزيد في قسم “العدُّ والتقدير” في \at{صفحة}[ref:33531520] و
-قسم “الاختبار والمراجعة” في \at{صفحة}[ref:34441726].
+المزيد في قسم~“\about[ref:33531520]” في \at{صفحة}[ref:33531520] و
+قسم~“\about[ref:33531520]” في \at{صفحة}[ref:34441726].
 
 إذا كنت تترجم مشروعا ضخما للمرة الأولى فقد يكون عليك البدء في العمل قبل
 مثل هذا الإعلان بفترة كبيرة على أيّ حال، لذا فلن يؤثر الإعلان كثيرا
@@ -2237,7 +2239,8 @@ bja\lettertilde fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 الكتاب استخدام البرمجيات لأتمتة مراجعة الترجمات. قدرة البرمجيات على
 إتقان المهام البسيطة المتكررة تؤهلها لاكتشاف الأخطاء الإملائية
 والمسافات الزائدة بالإضافة إلى أخطاء المُتَغيِّرات والرَّقْم. كثير من
-الأمور التي ناقشنها في قسم “مسائل تقنية” \at{صفحة}[ref:32352020] يمكن أن تكتشفها أدوات المراجعة الآلية.
+الأمور التي ناقشنها في قسم~“\about[ref:32352020]”
+\at{صفحة}[ref:32352020] يمكن أن تكتشفها أدوات المراجعة الآلية.
 
 يحتوي كلا من بُوتِل وفِرتال على عديد من فحوص الجودة التي تساعد في اكتشاف
 أنواع معينة من الأخطاء، بعضها متعلق بالتنسيق (مثل المسافات وعلامات
@@ -2534,7 +2537,8 @@ Name}\letterbackslash share\letterbackslash locale\letterbackslash
 
 \chapter{دراسات حالة}
 نعرض في هذا القسم بعض دراسات الحالة لمشروعات حرة شهيرة، وكيفية تقييمها.
-قد ترغب في مراجعة قسم “اختيار منتَج أو مشروع” في \at{صفحة}[ref:36346325] إذ سنستعمل بعضا من المعايير المذكورة هناك
+قد ترغب في مراجعة قسم~“\about[ref:36346325]” في \at{صفحة}[ref:36346325]
+إذ سنستعمل بعضا من المعايير المذكورة هناك
 لتقييم هذه المشروعات.
 
 \section[ref:34376426]{رسم تُكس}
