--- a/tex/main.tex
+++ b/tex/main.tex
@@ -218,7 +218,7 @@
 ذلك) تُحتِّم التخطيط لوسائل استدامة واستمرارية المشروع. فكِّر في كيفية
 تحفيز المتطوعين. و إن توفر المال سيكون عليك وضع ميزانية ومراقبة مدى
 الالتزام بها، وعليك كذلك حساب الوقت المستغرق في إنجاز العمل لتستطيع
-تنظيم الوقت أفضل. قسم~\about[ref:36383525]
+تنظيم الوقت أفضل. قسم~“تحديد الأولويات (عندما لا تستطيع فعل كل شيء)”
 \at{صفحة}[ref:36383525] يناقش بعض وسائل تقييم المشروعات وتحديد
 أولوياتها.
 
