--- a/tex/main.tex
+++ b/tex/main.tex
@@ -77,7 +77,7 @@
 \placefigure
   [here,force,nonumber]
   {انظر كيف طُوِّعَ محرر النصوص هذا ليناسب اللغة العربية}
-  {\externalfigure[img001.png][width=15.108cm]}
+  {\externalfigure[img001.png][width=.9\textwidth]}
 
 مع أن الترجمة هي الجزء الأهم في عملية التوطين إلا أن تغييرات أخرى يجب
 أخذها في الحسبان لتطويع برمجية لمجموعة من المستخدمين. فقد تكون حاجة
@@ -1701,7 +1701,7 @@ bja\lettertilde fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 
 \placefigure [right,hang]
   {none}
-  {\externalfigure[img003.png][width=2.5in]}
+  {\externalfigure[img003.png][width=.5\textwidth]}
 
 \section{فِرتال}
 فرتال أداة ترجمة قوية وبسيطة في آن. يمكنك بها زيادة إنتاجيتك بمعرفة
