--- a/tex/main.tex
+++ b/tex/main.tex
@@ -531,12 +531,15 @@
 اللغات، والعبارة التي لا تبدأ بحرف كبير قد تُفهم على أنها جزء من جملة.
 لذا يجب اتباع القواعد الصحيحة للكتابة. 
 
-\subsubsection{أمثلة}
-الأمثلة التالية بلغة سوتو الشمالية التي ليست في كتابتها أحرف كبيرة سوى
+\SetTableToWidth{\textwidth}
+\placetable
+  [here,nonumber]
+{
+هذه الأمثلة بلغة سوتو الشمالية التي ليست في كتابتها أحرف كبيرة سوى
 في أوائل الجمل وأسماء الأعلام، لذا فالحالة تطابق الإنگليزية في أوّل كل
 رسالة، إلا أنها تخالفها في باقي العبارة لمخالفتها قواعد كتابة سوتو
 الشمالية.
-\SetTableToWidth{\textwidth}
+}
 \starttable[|r|r|r|]
 \HL
 \NC\ReFormat[cB]{الإنگليزية}\NC\ReFormat[cB]{خطأ}\NC\ReFormat[cB]{صواب}     \SR
