Cleanup font setup

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -2518,7 +2518,7 @@ Name}\letterbackslash share\letterbackslash locale\letterbackslash
 
 \rexample{10.509 (ألمانيا)}
 
-\rexample{{\mal ൧൦،൫൦൯} (الهند؛ مالايلام)}
+\rexample{൧൦،൫൦൯ (الهند؛ مالايلام)}
 
 \subsubsection{مثال على التاريخ}
 \rexample{15 مارس 2010 (2010-03-15)}
