--- a/tex/type-adobearabic.tex
+++ b/tex/type-adobearabic.tex
@@ -1,22 +1,57 @@
-\definefontfallback[arrows][name:xits][0x2190-0x21FF][force=yes,check=yes]
-%\definefontfallback[malayalam][name:Dyuthi][malayalam]
+\definefontfeature [default]
+                   [default]
+                   [script=latn,
+                    protrusion=quality,expansion=quality,
+                    formatters=strip]
+\definefontfeature [arabic]
+                   [arabic]
+                   [protrusion=quality,expansion=quality,
+                    formatters=strip,anum=yes]
+\definefontfeature [arabic-mono]
+                   [arabic]
+                   [anum=no,tlig=no]
+
+\definefontfallback[serif] [name:XITS] [arrows][force=yes,check=yes]
+\definefontfallback[serif]
+                   [name:AdobeArabic-Regular*arabic]
+                   [arabic]
+                   [force=yes,check=yes,features=arabic]
+\definefontfallback[serif-italic]
+                   [name:AdobeArabic-Italic*arabic]
+                   [arabic]
+                   [force=yes,check=yes,features=arabic]
+\definefontfallback[serif-bold]
+                   [name:AdobeArabic-Bold*arabic]
+                   [arabic]
+                   [force=yes,check=yes,features=arabic]
+\definefontfallback[serif-bolditalic]
+                   [name:AdobeArabic-BoldItalic*arabic]
+                   [arabic]
+                   [force=yes,check=yes,features=arabic]
+
+\definefontfallback[mono]  [name:Meera][malayalam][rscale=1.2]
+
 \starttypescript [serif] [adobearabic]
  \usetypescript[serif][fallback]
  \definefontsynonym[Serif]
                    [name:AdobeArabic-Regular]
-                   [features=arabic,fallbacks=arrows]
+                   [features=default,fallbacks=serif]
  \definefontsynonym[SerifItalic]
-                   [name:AdobeArabic-Italic]            [features=arabic]
+                   [name:AdobeArabic-Italic]
+                   [features=default,fallbacks=serif-italic]
  \definefontsynonym[SerifBold]
-                   [name:AdobeArabic-Bold]              [features=arabic]
+                   [name:AdobeArabic-Bold]
+                   [features=default,fallbacks=serif-bold]
  \definefontsynonym[SerifBoldItalic]
-                   [name:AdobeArabic-BoldItalic]        [features=arabic]
+                   [name:AdobeArabic-BoldItalic]
+                   [features=default,fallbacks=serif-bolditalic]
 \stoptypescript
 
 \starttypescript [mono] [dejavu]
  \usetypescript[mono][fallback]
  \definefontsynonym[Mono]
-                   [name:DejaVuSansMono]                [features=arabic-mono]
+                   [name:DejaVuSansMono]
+                   [features=arabic-mono,fallbacks=mono]
  \definefontsynonym[MonoItalic]
                    [name:DejaVuSansMono-Oblique]        [features=arabic-mono]
  \definefontsynonym[MonoBold]
@@ -26,7 +61,7 @@
 \stoptypescript
 
 \starttypescript [adobearabic]
-  \definetypeface [adobearabic] [rm] [serif] [adobearabic] [default] 
+  \definetypeface [adobearabic] [rm] [serif] [adobearabic] [default]
   \definetypeface [adobearabic] [tt] [mono]  [dejavu]      [default][rscale=0.6]
   \definetypeface [adobearabic] [ss] [sans]  [default]     [default][rscale=0.8]
 \stoptypescript 
