Fix typos spoted by Waraqa

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -158,7 +158,7 @@
 من المهم الانتباه إلى أن الوثيقة المترجَمة عادة تقرأ بتتابع معروف من
 أولها إلى آخرها على الصورة التي وضعها المترجم عليها، لكن في حال
 البرمجيات لا تمكن تحديد ما سيراه المستخدم و بأي ترتيب، إذ تختلف طريقة
-استخدام البرمجية من شخص لآخر لذا فقد يطالع مستخدِم ما المترجمة بطرق غير
+استخدام البرمجية من شخص لآخر لذا فقد يطالع مستخدِم ما الترجمة بطرق غير
 الذي تراها أنت عندما تترجمها.
 
 \section{الاختلافات عن التوطين التجاري}
@@ -176,7 +176,7 @@
 تتلقى المشروعات الحرة المشهورة مساهمات ترجمة بلغات كثيرة، بل وأحيانا
 بلغات لا تجذب الاهتمام التجاري خارج عالم البرمجيات الحرة.
 
-فيما يخص للأدوات يُفضل بالطبع استخدام أدوات حرة لتوطين البرمجيات الحرة.
+فيما يخص الأدوات يُفضل بالطبع استخدام أدوات حرة لتوطين البرمجيات الحرة.
 نَسَق الملفات PO هو الأكثر شيوعا، ولأنه يحوى النص المصدر إضافة إلى
 الترجمة (مثله مثل XLIFF) فالاهتمام أقل بإعادة الترجمة وتبادل ذواكر
 الترجمة. قسم~\about[ref:38565525] في \at{صفحة}[ref:38565525]
@@ -369,7 +369,7 @@
 مع أن الترجمة عبر الوِب مفيدة إلا أن توفر اتصال جيد بالإنترنت مايزال
 عائقا أمام كثيرين. {\bf فِرْتَال} أداة ترجمة تعمل على الحاسوب بغير حاجة
 لاتصال بالإنترنت، و به وظائف عديدة لزيادة الإنتاجية مع المحافظة على
-الجودة. تجود تعليمات التنصيب و مزيد من المعلومات على موقع فرتال:
+الجودة. تجد تعليمات التنصيب و مزيد من المعلومات على موقع فرتال:
 \CURL{http://virtaal.org}
 
 لست مضطرا إلى الاختيار ما بين هاتين الأداتين فهما تكمل إحداهما الأخرى.
@@ -444,7 +444,7 @@
 المترجمة يتطلب هذا أو كنت تعرف أن لغتك توجد لها ترجمات مختلفة باختلاف
 البلد.
 
-بعد التطبيقات تتطلبُ ما يُعرف باسم {\it المحلية} لتعمل كما ينبغي مع
+بعض التطبيقات تتطلبُ ما يُعرف باسم {\it المحلية} لتعمل كما ينبغي مع
 لغتك. المحلية هي مجموعة إعدادات في نظام التشغيل تُقدِّم إلى البرمجيات
 معلومات عن لغتك والأنساق المتعلقة بها مثل طريقة تنسيق التاريخ والوقت
 وطريقة كتابة الأرقام إلى غير ذلك. المحليات المتاحة في نظام التشغيل عادة
