Make feature sets more specefic

--- a/tex/type-adobearabic.tex
+++ b/tex/type-adobearabic.tex
@@ -3,31 +3,31 @@
                    [script=latn,
                     protrusion=quality,expansion=quality,
                     formatters=strip]
-\definefontfeature [arabic]
+\definefontfeature [arabic-serif]
                    [arabic]
                    [protrusion=quality,expansion=quality,
                     formatters=strip,anum=yes]
 \definefontfeature [arabic-mono]
                    [arabic]
-                   [anum=no,tlig=no]
+                   [tlig=no,formatters=strip]
 
 \definefontfallback[serif] [name:XITS] [arrows][force=yes,check=yes]
 \definefontfallback[serif]
-                   [name:AdobeArabic-Regular*arabic]
+                   [name:AdobeArabic-Regular*arabic-serif]
                    [arabic]
-                   [force=yes,check=yes,features=arabic]
+                   [force=yes,check=yes,features=arabic-serif]
 \definefontfallback[serif-italic]
-                   [name:AdobeArabic-Italic*arabic]
+                   [name:AdobeArabic-Italic*arabic-serif]
                    [arabic]
-                   [force=yes,check=yes,features=arabic]
+                   [force=yes,check=yes,features=arabic-serif]
 \definefontfallback[serif-bold]
-                   [name:AdobeArabic-Bold*arabic]
+                   [name:AdobeArabic-Bold*arabic-serif]
                    [arabic]
-                   [force=yes,check=yes,features=arabic]
+                   [force=yes,check=yes,features=arabic-serif]
 \definefontfallback[serif-bolditalic]
-                   [name:AdobeArabic-BoldItalic*arabic]
+                   [name:AdobeArabic-BoldItalic*arabic-serif]
                    [arabic]
-                   [force=yes,check=yes,features=arabic]
+                   [force=yes,check=yes,features=arabic-serif]
 
 \definefontfallback[mono]  [name:Meera][malayalam][rscale=1.2]
 
