Set PDF metadata

--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -5,7 +5,10 @@
 %
 \setvariables
   [l10n-manual]
-  [title=]
+  [title=,
+   subtitle=,
+   author=,
+   keywords=]
 
 %
 % directionality
@@ -139,7 +142,12 @@
      focus=standard,
      color=niceblue,
      style=normal,
-     page=no]
+     page=no,
+     title=\getvariable{l10n-manual}{title},
+     subtitle=\getvariable{l10n-manual}{subtitle},
+     author=\getvariable{l10n-manual}{author},
+     keywords=\getvariable{l10n-manual}{keywords}]
+
   \setupcombinedlist[content][interaction=pagenumber]
 \stopmode
 
