--- a/tex/main.tex
+++ b/tex/main.tex
@@ -2,7 +2,10 @@
 
 \setvariables
   [l10n-manual]
-  [title=إحداث التغيير بتوطين المعلوماتية]
+  [title=إحداث التغيير بتوطين المعلوماتية,
+   subtitle=دَلِيلٌ لِتَوطِينِ البَرمَجِيَّاتِ الحُرَّةِ مفتوحةِ المَصدَرِ,
+   author={فريدِل وُلف، خالد حسني، أحمد غربية},
+   keywords=توطين ترجمة تعريب برمجيات]
 
 \starttext
 
