--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -146,7 +146,7 @@
      title=\getvariable{l10n-manual}{title},
      subtitle=\getvariable{l10n-manual}{subtitle},
      author=\getvariable{l10n-manual}{author},
-     keywords=\getvariable{l10n-manual}{keywords}]
+     keyword=\getvariable{l10n-manual}{keywords}]
 
   \setupcombinedlist[content][interaction=pagenumber]
 \stopmode
