Support for bookmarks

--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -148,6 +148,14 @@
      author=\getvariable{l10n-manual}{author},
      keyword=\getvariable{l10n-manual}{keywords}]
 
+  \placebookmarks
+    [chapter]
+   %[chapter,section,subsection]
+   %[chapter,section,subsection]
+
+  \setupinteractionscreen
+    [option=bookmark]
+
   \setupcombinedlist[content][interaction=pagenumber]
 \stopmode
 
