--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -31,7 +31,11 @@
 %
 % fonts
 %
-\setupbodyfont[adobearabic, 12pt]
+\setupbodyfont[adobearabic]
+
+\doifmodeelse{screen}
+  {\setupbodyfont[14pt]}
+  {\setupbodyfont[12pt]}
 
 %
 % chapter header
@@ -181,9 +185,9 @@
 %
 % layout
 %
-\setuppapersize
-  [A5]
-  [A5]%[A4]
+\doifmodeelse{screen}
+  {\setuppapersize[A4][A4]}
+  {\setuppapersize[A5][A5]}
 
 \setuplayout
   [grid=no,
