Disable protrusion and expansion; of dubious value

--- a/tex/type-adobearabic.tex
+++ b/tex/type-adobearabic.tex
@@ -1,12 +1,9 @@
 \definefontfeature [default]
                    [default]
-                   [script=latn,
-                    protrusion=quality,expansion=quality,
-                    formatters=strip]
+                   [script=latn,formatters=strip]
 \definefontfeature [arabic-serif]
                    [arabic]
-                   [protrusion=quality,expansion=quality,
-                    formatters=strip,anum=yes]
+                   [formatters=strip,anum=yes]
 \definefontfeature [arabic-mono]
                    [arabic]
                    [tlig=no,formatters=strip]
