--- a/tex/main.tex
+++ b/tex/main.tex
@@ -5,7 +5,8 @@
   [title=إحداث التغيير بتوطين المعلوماتية,
    subtitle=دَلِيلٌ لِتَوطِينِ البَرمَجِيَّاتِ الحُرَّةِ مفتوحةِ المَصدَرِ,
    author={فريدِل وُلف، خالد حسني، أحمد غربية},
-   keywords=توطين ترجمة تعريب برمجيات]
+   keywords=توطين ترجمة تعريب برمجيات,
+   direction=r2l]
 
 \starttext
 
