A more friendly name

--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -11,6 +11,9 @@
    keywords=,
    direction=]
 
+\unexpanded\def\setuplocalisationmanual[#1]
+  {\setvariables[l10n-manual][#1]}
+
 %
 % directionality
 %
