--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1,7 +1,6 @@
 \environment l10n-ar
 
-\setvariables
-  [l10n-manual]
+\setuplocalisationmanual
   [title=إحداث التغيير بتوطين المعلوماتية,
    subtitle=دَلِيلٌ لِتَوطِينِ البَرمَجِيَّاتِ الحُرَّةِ مفتوحةِ المَصدَرِ,
    author={فريدِل وُلف، خالد حسني، أحمد غربية},
