--- a/tex/main.tex
+++ b/tex/main.tex
@@ -5,7 +5,8 @@
    subtitle=دَلِيلٌ لِتَوطِينِ البَرمَجِيَّاتِ الحُرَّةِ مفتوحةِ المَصدَرِ,
    author={فريدِل وُلف، خالد حسني، أحمد غربية},
    keywords=توطين ترجمة تعريب برمجيات,
-   direction=r2l]
+   direction=r2l,
+   language=arabic]
 
 \starttext
 
