Sync fixes from pootle

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1671,10 +1671,10 @@ bja\lettertilde fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 \example{There are \%d photos on the device \%s}
 
 وسيُظهر هذا شيئا مثل “There are 55 photos on the device Nikon XYZ”. لكن
-قد يكون من الأنسب صياغة الترجمة على “يحتوي الجهاز Nikon XYZ على 55
+قد يكون من الأنسب صياغة الترجمة على “تحتوي النبيطة Nikon XYZ على 55
 صورة”، وساعتها ستكون عبارة الترجمة كتالي:
 
-\example{يحتوي الجهاز \ltr{{\bf \%2\$s}} على \ltr{{\bf \%1\$d}} صورة}
+\example{تحتوي النبيطة \ltr{{\bf \%2\$s}} على \ltr{{\bf \%1\$d}} صورة}
 
 هنا غيّرنا الأسماء الرمزية للمتغيرات ليدل الاسم على موضع المتغير في
 العبارة المصدر بالإنگليزية. فالمتغير “\Type{%d}” يصبح “\Type{%1$d}”
@@ -1955,7 +1955,7 @@ bja\lettertilde fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 
 \chapter{مشروعات التوطين}
 \section[ref:38565525]{صيرورة توطين بسيطة}
-في أبسط حالات الترجمة فإنّك تُعطى
+في أبسط حالات الترجمة فإنّك تُعطىٰ
 ملفا واحدة لترجمته فتفتحه بأداة ترجمة مثل فِرتال ثم تعيده إلى المطورين
 بعد تمام ترجمة العبارات الواردة فيه ومراجعتها. لكن عادة ما تكون الأمور
 أكثر تعقيدا، مع أن بعض المشروعات تعمل بهذه الصيرورة، خاصة عندما تكون
