--- a/manual.po
+++ b/manual.po
@@ -4977,7 +4977,7 @@ msgstr ""
 "بسبب ذلك، كما أن سطور النص الطويلة الكثيرة تزعج المشاركين في القناة. من "
 "الأفضل في هذه الحالات التراسل بالبريد الإلكتروني، أو وضع النص الذي تريد "
 "إطلاع غيرك عليه على إحدى خدمات <f1>pastebin</f1>، و هي خدمات على الوب يمكن "
-"لصق النص فيها الربط إليه من الحوار في القناة."
+"لصق النص فيها والربط إليه من الحوار في القناة."
 
 msgid "Bug trackers"
 msgstr "مُقتَفِياتُ العِلّاتِ"
