--- a/tex/main.tex
+++ b/tex/main.tex
@@ -2099,7 +2099,7 @@ bja\lettertilde fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 اتصالك بسبب ذلك، كما أن سطور النص الطويلة الكثيرة تزعج المشاركين في
 القناة. من الأفضل في هذه الحالات التراسل بالبريد الإلكتروني، أو وضع
 النص الذي تريد إطلاع غيرك عليه على إحدى خدمات {\it pastebin}، و هي
-خدمات على الوب يمكن لصق النص فيها الربط إليه من الحوار في القناة.
+خدمات على الوب يمكن لصق النص فيها والربط إليه من الحوار في القناة.
 
 \subsection{مُقتَفِياتُ العِلّاتِ}
 تَستخدم مشروعات كثيرة {\it مقتفيات علات} مثل بگزيلا أو تراك، وهي نظم
