Fixes from Taha

--- a/manual.po
+++ b/manual.po
@@ -783,7 +783,7 @@ msgid ""
 "goals better, you will find more constructive ways to prioritise different "
 "projects, and hopefully, reach your goals faster or more successfully."
 msgstr ""
-"في مشروع Translate.org.za في جنوب أفريقيا أردنا أن تمكين الناس و دعم لغاتهم، "
+"في مشروع Translate.org.za في جنوب أفريقيا أردنا تمكين الناس و دعم لغاتهم، "
 "أو هكذا انتوينا، لكننا في البداية أخطأنا الطريق الأمثل لتحقيق هذا الهدف، "
 "فكنا نترجم البرمجيات التي تعجبنا بدلا من البرمجيات التي قد يستخدمها الناس "
 "أكثر. ولأننا لا نستطيع ترجمة كل شيء كان علينا الاختيار وتحديد الأولويات. "
@@ -857,7 +857,7 @@ msgstr ""
 "مصطلحات وأسلوب التطبيقات الأخرى في المنصة التي سيعمل عليها التطبيق (وِندوز أو "
 "كدي أو گنوم، إلخ.) و خذ في الحسبان الاتساق مع اللغة التي يستعملها الناس خارج "
 "عالم الحوسبة؛ في الجامعات والصحف والمجلات و غيرها، عندما يكون ذلك مفيدا. مع "
-"الوقت ستطور أسلوبك الخاص ولن تقع في أخطاء الآخرين، لكن لا تسعى للاختلاف "
+"الوقت ستطور أسلوبك الخاص ولن تقع في أخطاء الآخرين، لكن لا تسعَ للاختلاف "
 "لمجرد الاختلاف."
 
 msgid ""
@@ -1305,8 +1305,8 @@ msgid ""
 "that your localisation is part of a set of different localisations for your "
 "language."
 msgstr ""
-"بعض اللغات التي تُستعمّلُ تنويعات منها في أكثر من بلد تكون لها ترجمة مختلفة لكل "
-"بلد، وفي هذه الحالة تُمَيَّزُ يُلحق رمز البلد إلى رمز اللغة، مثل ‘fr_CA’ للفرنسية "
+"بعض اللغات التي تُستعمَلُ تنويعات منها في أكثر من بلد تكون لها ترجمة مختلفة لكل "
+"بلد، وفي هذه الحالة تُمَيَّزُ بأن يُلحق رمز البلد إلى رمز اللغة، مثل ‘fr_CA’ للفرنسية "
 "الكندية أو ‘en_GB’ للإنگليزية البريطانية. لاحظ أنه لا حاجة لتحديد رمز البلد "
 "إلا في حال وجود أكثر من ترجمة لأكثر من بلد تستعمل فيه ذات اللغة، لذا لا تُحدد "
 "رمز البلد إلا إذا كان مشروع البرمجية المترجمة يتطلب هذا أو كنت تعرف أن لغتك "
@@ -4567,7 +4567,7 @@ msgid ""
 "used for terminology matching."
 msgstr ""
 "قد يساعد بُوتل المترجمين في مسألة المصطلحات، فيمكن وضع مسرد مصطلحات عام لكل "
-"لغة مع إمكانية تخطيها بإضافة مسارد لكل مشروع على حدة. يمكن يحتوي مشروع يسمى "
+"لغة مع إمكانية تخطيها بإضافة مسارد لكل مشروع على حدة. يمكن أن يحتوي مشروع يسمى "
 "“terminology” على أية ملفات تستخدم لمطابقة المصطلحات."
 
 msgid ""
@@ -4667,7 +4667,7 @@ msgid ""
 "project Tux Paint, which is very simple and an ideal starting point (see "
 "page <bf0>57</bf0>)."
 msgstr ""
-"في أبسط حالات الترجمة فإنّك تُعطىٰ ملفا واحدة لترجمته فتفتحه بأداة ترجمة مثل "
+"في أبسط حالات الترجمة فإنّك تُعطىٰ ملفا واحدا لترجمته فتفتحه بأداة ترجمة مثل "
 "فِرتال ثم تعيده إلى المطورين بعد تمام ترجمة العبارات الواردة فيه ومراجعتها. "
 "لكن عادة ما تكون الأمور أكثر تعقيدا، مع أن بعض المشروعات تعمل بهذه الصيرورة، "
 "خاصة عندما تكون المرة الأولى التي تُتَرجم فيها البرمجية إلى لغتك. يمكنك تبسيط "
