Sync tex with po file

--- a/manual.po
+++ b/manual.po
@@ -4567,7 +4567,7 @@ msgid ""
 "used for terminology matching."
 msgstr ""
 "قد يساعد بُوتل المترجمين في مسألة المصطلحات، فيمكن وضع مسرد مصطلحات عام لكل "
-"لغة مع إمكانية تخطيها بإضافة مسارد لكل مشروع على حدة. يمكن أن يحتوي مشروع يسمى "
+"لغة مع إمكانية تخطيها بإضافة مسارد لكل مشروع على حدة. يمكن أن يحتوي مشروعا يسمى "
 "“terminology” على أية ملفات تستخدم لمطابقة المصطلحات."
 
 msgid ""
