--- a/tex/main.tex
+++ b/tex/main.tex
@@ -211,7 +211,7 @@
 إذا أردت.
 
 \subsection{تحديد الأهداف لتحقيق المقاصد}
-في مشروع Translate.org.za في جنوب أفريقيا أردنا أن تمكين الناس و دعم
+في مشروع Translate.org.za في جنوب أفريقيا أردنا تمكين الناس و دعم
 لغاتهم، أو هكذا انتوينا، لكننا في البداية أخطأنا الطريق الأمثل لتحقيق
 هذا الهدف، فكنا نترجم البرمجيات التي تعجبنا بدلا من البرمجيات التي قد
 يستخدمها الناس أكثر. ولأننا لا نستطيع ترجمة كل شيء كان علينا الاختيار
@@ -247,7 +247,7 @@
 (وِندوز أو كدي أو گنوم، إلخ.) و خذ في الحسبان الاتساق مع اللغة التي
 يستعملها الناس خارج عالم الحوسبة؛ في الجامعات والصحف والمجلات و غيرها،
 عندما يكون ذلك مفيدا. مع الوقت ستطور أسلوبك الخاص ولن تقع في أخطاء
-الآخرين، لكن لا تسعى للاختلاف لمجرد الاختلاف.
+الآخرين، لكن لا تسعَ للاختلاف لمجرد الاختلاف.
 
 {\bi كن حريصا وجريئا.} قد تبدو هذه النصيحة متناقضة، لكن اسعَ إلى
 الموازنة بين هذين الهدفين المتضادين. ينبغي أن تكون حريصا في عملك وأن
@@ -440,8 +440,8 @@
 ويكيبيديا:
 \CURL{http://en.wikipedia.org/wiki/ISO_639}
 
-بعض اللغات التي تُستعمّلُ تنويعات منها في أكثر من بلد تكون لها ترجمة
-مختلفة لكل بلد، وفي هذه الحالة تُمَيَّزُ يُلحق رمز البلد إلى رمز اللغة،
+بعض اللغات التي تُستعمَلُ تنويعات منها في أكثر من بلد تكون لها ترجمة
+مختلفة لكل بلد، وفي هذه الحالة تُمَيَّزُ بأن يُلحق رمز البلد إلى رمز اللغة،
 مثل ‘fr\_CA’ للفرنسية الكندية أو ‘en\_GB’ للإنگليزية البريطانية. لاحظ
 أنه لا حاجة لتحديد رمز البلد إلا في حال وجود أكثر من ترجمة لأكثر من بلد
 تستعمل فيه ذات اللغة، لذا لا تُحدد رمز البلد إلا إذا كان مشروع البرمجية
@@ -1918,7 +1918,7 @@ bja\lettertilde fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 \subsection[ref:20355427]{المصطلحات}
 قد يساعد بُوتل المترجمين في مسألة
 المصطلحات، فيمكن وضع مسرد مصطلحات عام لكل لغة مع إمكانية تخطيها بإضافة
-مسارد لكل مشروع على حدة. يمكن يحتوي مشروع يسمى “terminology” على أية
+مسارد لكل مشروع على حدة. يمكن أن يحتوي مشروعا يسمى “terminology” على أية
 ملفات تستخدم لمطابقة المصطلحات.
 
 يستطيع مديرو المشروعات توليد قائمة المصطلحات المتواترة من لسان “ترجم” في
@@ -1956,7 +1956,7 @@ bja\lettertilde fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 \chapter{مشروعات التوطين}
 \section[ref:38565525]{صيرورة توطين بسيطة}
 في أبسط حالات الترجمة فإنّك تُعطىٰ
-ملفا واحدة لترجمته فتفتحه بأداة ترجمة مثل فِرتال ثم تعيده إلى المطورين
+ملفا واحدا لترجمته فتفتحه بأداة ترجمة مثل فِرتال ثم تعيده إلى المطورين
 بعد تمام ترجمة العبارات الواردة فيه ومراجعتها. لكن عادة ما تكون الأمور
 أكثر تعقيدا، مع أن بعض المشروعات تعمل بهذه الصيرورة، خاصة عندما تكون
 المرة الأولى التي تُتَرجم فيها البرمجية إلى لغتك. يمكنك تبسيط الأمور
