Fix tables and git rid of some special characters

--- a/tex/type-adobearabic.tex
+++ b/tex/type-adobearabic.tex
@@ -1,6 +1,6 @@
 \definefontfeature [default]
                    [default]
-                   [script=latn,formatters=strip]
+                   [script=latn,formatters=strip,trep=no,tlig=no]
 \definefontfeature [arabic-serif]
                    [arabic]
                    [formatters=strip,anum=yes]
