~ is not a special character anymore

--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -289,4 +289,7 @@
 
 \unexpanded\def\type{\groupedcommand{\setgroupedtype\bidilre}{\bidipop}} % fixme
 
+\unexpanded\def\قسم#1 {قسم~\about[ref:#1]}
+\unexpanded\def\صفحة#1{صفخة~\at[ref:#1]}
+
 \stopenvironment
