--- a/tex/main.tex
+++ b/tex/main.tex
@@ -11,6 +11,39 @@
 \starttext
 \asciimode
 \startfrontmatter
+
+\startalignment[middle]
+بعض محتويات هذا الكتاب بنيت على مواد من موقع مشروع Translate\rlm:
+\CURL{http://translate.sourceforge.net/}
+
+\placetable[here,force,nonumber]{}
+\starttable[|rp(.5\textwidth)B|lp(.5\textwidth)|]
+\NC تنسيق المشروع          \NC منال حسن                        \MR
+\NC                        \NC Dwayne Bailey                   \MR
+\NC المؤلف                 \NC Friedel Wolff                   \MR
+\NC الكتابة الإضافية        \NC Samuel Murray – المصطلحات       \MR
+\NC                        \NC خالد حسني – النقحرة             \MR
+\NC المراجعة               \NC Hermien Bos                     \MR
+\NC                        \NC Kenneth Nielsen                 \MR
+\NC الرسوم والغلاف          \NC Heather Bailey                  \MR
+\NC التنضيد (نسخة الطباعة) \NC خالد حسني                       \MR
+\NC الترجمة العربية        \NC خالد حسني                       \MR
+\NC                        \NC أحمد غربية                      \MR
+\NC الترجمة الفرنسية       \NC Mohomodou Houssouba             \MR
+\NC                        \NC Claude Paroz                    \MR
+\NC الترجمة الإسبانية       \NC Lucía Morado Vázquez            \MR
+\NC                        \NC Silvia Rodríguez Vázquez        \MR
+\NC التمويل                \NC مركز بحوث التطوير الدولي (IDRC) \MR
+\stoptable
+
+© 2011 Translate.org.za
+
+هذا الكتاب مُرخَّصٌ برخصة المشاع الإبداعي “النِّسبة، غيرالتجاري، الترخيص بالمثل”:
+\CURL{http://creativecommons.org/licenses/by-nc-sa/3.0}
+
+\stopalignment
+\page
+
 \section{مقدمة}
 الحواسيب أدوات رائعة يمكن الانتفاع بها على أوجه لا حصر لها، إلا أننا
 ننزعج عندما لا تعمل على النحو الذي نريد. نتفاعل باستمرار مع التقنية
@@ -45,17 +78,6 @@
 بهدف إبقائه في حجم معقول. توجد موضوعات أخرى عديدة تتعلق بلغة بعينها أو
 أداة بعينها، غير أننا في هذا الدليل نقتصر على التعرض للموضوعات
 المشترَكة في توطين أغلب البرمجيات الحرة، وعلى أداتي بُوتِل وفِرتال.
-
-\page
-
-\section{إشادات}
-بعض محتويات هذا الكتاب بُنَيَت على مواد من موقع مشروع Translate\rlm:
-\CURL{http://translate.sourceforge.net/}
-
-\section{الرُّخصة}
-هذا الكتاب مُرخَّصٌ برخصة المشاع الإبداعي: النِّسبة، غيرالتجاري، الترخيص
-بالمثل:
-\CURL{http://creativecommons.org/licenses/by-nc-sa/3.0}
 
 \completecontent
 
