Workaround for RTL bug

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -43,7 +43,7 @@
 
 \stopalignment
 \page
-
+\rlm
 \section{مقدمة}
 الحواسيب أدوات رائعة يمكن الانتفاع بها على أوجه لا حصر لها، إلا أننا
 ننزعج عندما لا تعمل على النحو الذي نريد. نتفاعل باستمرار مع التقنية
