--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1,7 +1,7 @@
 \environment l10n-ar
 
 \setuplocalisationmanual
-  [title=إحداث التغيير بتوطين المعلوماتية,
+  [title=إحداثُ التغيير بتوطين المعلوماتيّة,
    subtitle=دَلِيلٌ لِتَوطِينِ البَرمَجِيَّاتِ الحُرَّةِ مفتوحةِ المَصدَرِ,
    author={فريدِل وُلف، خالد حسني، أحمد غربية},
    keywords=توطين ترجمة تعريب برمجيات,
@@ -11,6 +11,8 @@
 \starttext
 \asciimode
 \startfrontmatter
+
+\CoverPage
 
 \startalignment[middle]
 بعض محتويات هذا الكتاب بنيت على مواد من موقع مشروع Translate\rlm:
@@ -42,7 +44,9 @@
 \CURL{http://creativecommons.org/licenses/by-nc-sa/3.0}
 
 \stopalignment
+
 \page
+
 \rlm
 \section{مقدمة}
 الحواسيب أدوات رائعة يمكن الانتفاع بها على أوجه لا حصر لها، إلا أننا
@@ -2717,5 +2721,7 @@ xdg-user-dirs لا تستخدم غالبا إلا على أنظمة لينُكس
 الأمد فقد ترغب في العمل عليه.
 
 \stopbodymatter
+
+\page[empty]
 
 \stoptext
