Linux libertine arrows look better

--- a/tex/type-adobearabic.tex
+++ b/tex/type-adobearabic.tex
@@ -8,7 +8,7 @@
                    [arabic]
                    [tlig=no,formatters=strip]
 
-\definefontfallback[serif] [name:XITS] [arrows][force=yes,check=yes]
+\definefontfallback[serif] [name:Linux Libertine O] [arrows][force=yes,check=yes]
 \definefontfallback[serif]
                    [name:AdobeArabic-Regular*arabic-serif]
                    [arabic]
