--- a/tex/main.tex
+++ b/tex/main.tex
@@ -3,7 +3,9 @@
 \setuplocalisationmanual
   [title=إحداثُ التغيير بتوطين المعلوماتيّة,
    subtitle=دَلِيلٌ لِتَوطِينِ البَرمَجِيَّاتِ الحُرَّةِ مفتوحةِ المَصدَرِ,
-   author={فريدِل وُلف، خالد حسني، أحمد غربية},
+   author=فريدِل وُلف,
+   translator1=خالد حسني,
+   translator2=أحمد غربية,
    keywords=توطين ترجمة تعريب برمجيات,
    direction=r2l,
    language=arabic]
